# CLists

./: .gitignore  CMakeLists.txt  README.md  clist.pc.in
include/: clist.h
src/: clist_includes.h  clist_struct.h  list_append.c  list_at.c  list_deinit.c  list_get.c  list_init.c
test/: test.cpp
